# candy

./: .gitignore  CMakeLists.txt  Package.swift  README.md
candy/: .gitignore  CMakeLists.txt  README.md
candy/include/: module.modulemap
candy/include/Candy/Core/: CANHelpers.hpp  CANIO.hpp  CANKernelTypes.hpp
candy/include/Candy/Core/Frame/: FramePacket.hpp
candy/include/Candy/Core/Signal/: NumericValue.hpp  SignalCodec.hpp
candy/include/Candy/DBCInterpreters/: V2CTranscoder.hpp
candy/include/Candy/DBCInterpreters/DBC/: DBCParsable.hpp
candy/include/Candy/DBCInterpreters/V2C/: TranslatedMessage.hpp  TranslatedMultiplexer.hpp  TranslatedSignal.hpp
candy/include/Candy/Swift/: CSVTranscoderWrapper.hpp
candy/lib/Candy/: CMakeLists.txt
candy/lib/Candy/DBCInterpreters/: FileTranscoder.cpp  SQLTranscoder.cpp  V2CTranscoder.cpp
candy/lib/Candy/DBCInterpreters/DBC/: DBCInterpreter.cpp  DBCParser.cpp
candy/lib/Candy/Swift/: SQLTranscoderWrapper.cpp
candy/pi_wifi_connect/json_generator/: json_gen.cpp
candy/test/: CMakeLists.txt  CSVTest.cpp  CSVWriterTest.cpp  V2CTest.cpp  network.dbc
candy/test/pi_wifi/: pi_side.cpp
cmake/: GetBoost.cmake  GetBoostSpirit.cmake  GetGGML.cmake  GetSQLite.cmake
include/: module.modulemap
include/CAN/: CANHelpers.hpp  CANTranscoder.hpp
include/CAN/frame/: FrameIterator.hpp  FramePacket.hpp
include/CAN/signal/: NumericValue.hpp  SignalCalculationType.hpp  SignalCodec.hpp
include/Candy/: Candy.h
include/Candy/Buffer/: BackendInterface.hpp  BufferUtils.hpp  CANDataBuffer.hpp
include/Candy/CAN/: CANHelpers.hpp
include/Candy/CAN/Frame/: FrameIterator.hpp  FramePacket.hpp
include/Candy/CAN/Signal/: NumericValue.hpp  SignalCalculationType.hpp  SignalCodec.hpp
include/Candy/Core/: CANBundle.hpp  CANDataBufferVisitor.hpp  CANHelpers.hpp  CANIO.hpp  CANIOConcepts.hpp  CANIOHelperTypes.hpp  CANKernelTypes.hpp  CANVisitor.hpp  CSVWriter.hpp
include/Candy/Core/DBC/: DBCInterpreter.hpp  DBCInterpreterConcepts.hpp  DBCParser.hpp  DBCParserUtils.hpp
include/Candy/Core/Frame/: FrameIterator.hpp  FramePacket.hpp
include/Candy/Core/Signal/: SignalCalculationType.hpp  SignalCodec.hpp
include/Candy/DBC/: DBCInterpreter.hpp  DBCInterpreterConcepts.hpp  DBCParser.hpp
include/Candy/DBC/Interpreters/: LoggingTranscoder.hpp  MotecGenerator.hpp
include/Candy/DBC/Transcoders/: CANTranscoder.hpp  CSVTranscoder.hpp  SQLTranscoder.hpp  V2CTranscoder.hpp
include/Candy/DBC/Transcoders/V2C/: SignalAssembly.hpp  TranslatedMessage.hpp  TranslatedMultiplexer.hpp
include/Candy/DBCInterpreters/: CSVTranscoder.hpp  LoggingTranscoder.hpp  MotecGenerator.hpp  SQLTranscoder.hpp  V2CTranscoder.hpp
include/Candy/DBCInterpreters/DBC/: DBCInterpreter.hpp  DBCInterpreterConcepts.hpp  DBCParser.hpp
include/Candy/DBCInterpreters/File/: FileTranscoder.hpp
include/Candy/DBCInterpreters/V2C/: SignalAssembly.hpp  TransmissionGroup.hpp
include/Candy/IO/: CANIO.hpp  CANIOConcepts.hpp  CANIOHelperTypes.hpp  IOHelperTypes.hpp
include/Candy/Interpreters/: CSVTranscoder.hpp  FileTranscoder.hpp  FileTranscoderConcepts.hpp  LoggingTranscoder.hpp  MotecGenerator.hpp  SQLTranscoder.hpp  V2CTranscoder.hpp
include/Candy/Interpreters/File/: FileTranscoder.hpp  FileTranscoderConcepts.hpp
include/Candy/Interpreters/V2C/: SignalAssembly.hpp  TranslatedMessage.hpp  TranslatedSignal.hpp  TransmissionGroup.hpp
include/Candy/Swift/: CSVTranscoderWrapper.hpp  SQLTranscoderWrapper.hpp
include/DBC/: DBCInterpreter.hpp  DBCInterpreterConcepts.hpp  DBCParser.hpp
include/buffering/: BackendInterface.hpp  CANDataBuffer.hpp
include/interpreters/: CSVTranscoder.hpp  HelperTypes.hpp  LoggingTranscoder.hpp  MotecGenerator.hpp  SQLTranscoder.hpp  V2CTranscoder.hpp
include/interpreters/SQL/: SQLHelperTypes.hpp
include/interpreters/V2C/: SignalAssembly.hpp
include/interpreters/V2C/translation/: TranslatedMessage.hpp
include/transcoders/: CANTranscoder.hpp  CANTranscoderConcepts.hpp  CSVTranscoder.hpp  SQLTranscoder.hpp  V2CTranscoder.hpp
include/transcoders/V2C/: SignalAssembly.hpp  TransmissionGroup.hpp
include/transcoders/V2C/translation/: TranslatedMessage.hpp  TranslatedMultiplexer.hpp  TranslatedSignal.hpp
lib/: CMakeLists.txt
lib/Buffer/: CANBackend.cpp  CANDataBuffer.cpp
lib/CAN/frame/: FrameIterator.cpp  FramePacket.cpp
lib/CAN/signal_processing/: NumericValue.cpp  SignalCalculationType.cpp  SignalCodec.cpp
lib/Candy/: CMakeLists.txt
lib/Candy/Core/DBC/: DBCInterpreter.cpp
lib/Candy/Core/Signal/: SignalCodec.cpp
lib/Candy/DBCInterpreters/: CSVTranscoder.cpp  MotecGenerator.cpp  SQLTranscoder.cpp
lib/Candy/DBCInterpreters/V2C/: TranslatedMessage.cpp  TransmissionGroup.cpp
lib/Candy/Swift/: CSVTranscoderWrapper.cpp  SQLTranscoderWrapper.cpp
lib/Core/DBC/: DBCInterpreter.cpp  DBCParser.cpp
lib/Core/Frame/: FrameIterator.cpp  FramePacket.cpp
lib/Core/Signal/: NumericValue.cpp  SignalCalculationType.cpp  SignalCodec.cpp
lib/DBC/: DBCParser.cpp
lib/HAL/: CMakeLists.txt
lib/HAL/STM32/: CMakeLists.txt
lib/HAL/STM32/STM32H7xx/: CMakeLists.txt
lib/Interpreters/: CSVTranscoder.cpp  FileTranscoder.cpp  MotecGenerator.cpp  SQLTranscoder.cpp  V2CTranscoder.cpp
lib/Interpreters/V2C/: TranslatedMessage.cpp  TransmissionGroup.cpp
lib/buffering/: CANBackend.cpp  CANDataBuffer.cpp
lib/transcoders/: CANTranscoder.cpp  CSVTranscoder.cpp  MotecGenerator.cpp  SQLTranscoder.cpp  V2CTranscoder.cpp
lib/transcoders/V2C/: TranslatedMessage.cpp  TransmissionGroup.cpp
pi_wifi_connect/mac_side/: mac_side.cpp
pi_wifi_connect/pi_side/: pi_side.cpp
template/: CMakeLists.txt
template/src/: main.c
test/: BackendTest.cpp  CMakeLists.txt  CSVTest.cpp  GGMLTest.cpp  MotecTest.cpp  SQLTest.cpp  V2CTest.cpp  motec.dbc  motec_test.csv  test.cpp
test/CandySwift/: TestImport.swift
test/pi_wifi/: mac_side.cpp
test_csv_output_swift/: decoded_frames.csv  messages.csv
utils/: GetSQLite.cmake
